--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-router-native": "^5.2.0",
     "react-scripts": "4.0.3",
+    "router": "^1.3.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -34,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^5.2.4"
   }
 }
