--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "css-loader": "^5.2.4"
+    "css-loader": "^5.2.4",
+    "eslint-plugin-html": "^6.1.2"
   }
 }
