--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "prettier": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "css-loader": "^5.2.4",
+    "eslint": "^7.27.0",
     "eslint-plugin-html": "^6.1.2"
   }
 }
